--- a/begriffe.tex
+++ b/begriffe.tex
@@ -2,16 +2,21 @@
 \label{cha:Begriffe}
 
 Diese Erklärung der Begriffe und Elemente verfolgt zwei Ziele.
-Zum einen stellt die Grundlage des gesamten Themas dar und soll für Interessierte die nicht so vertraut sind, eine Einführung in die Thematik bieten. Des weiteren werden viele dieser Begriffe noch häufig zum Einsatz kommen (u.A. Neuron, Aktivierungsfunktion, …).
-
+Zum einen stellt dies Grundlage des gesamten Themas dar und soll für Interessierte die nicht so vertraut sind, eine Einführung in die Thematik bieten. Und zum anderen werden viele dieser Begriffe erläutert, welche noch häufig zum Einsatz kommen (u.A. Neuron, Aktivierungsfunktion, …).
 
 \section{Data Science}
 
+Data Science wird generell als die Extraktion von Wissen aus Daten bezeichnet. Dabei werden die Teilbereiche, Statistik und Mathematik, Computer Science und Machine Learning sowie einige weiter, in diesem Begriff zusammen gefasst. Das Gebiet für sich, wird auch als Berufstätigkeit bezeichnet, wobei meist spezialisierte Formen für die Berufsbezeichnung verwendet wird.\\
 
+Damit Wissen aus Daten überhaupt extrahiert werden kann, muss ein ganzer Prozess durchlaufen werden. Dieser Beginnt mit dem zusammentragen von Rohdaten aus der Realität, welche aber zu diesem Zeitpunkt noch keinen Zusammenhang offenbaren. Im zweiten Prozessschritt werden diese Daten meist umgebaut und neu sortiert wobei dieser Schritt nicht immer erforderlich ist. Auf die  zurecht gelegten Daten bestecht nun die Möglichkeit Modelle, Algorithmen sowie weitere Extraktionen durchzuführen. Die erneut extrahierten Daten werden in dem zweiten Prozessschritt als Ausgangsdaten verwendet. Auf die Daten ausgeführte Modelle und Algorithmen liefern Ergebnisse die Visuell dargestellt für eine größer Gruppe an Personen geeignet ist. Aus den gelernten Wissen besteht zusätzlich die Möglichkeit diese zum Generieren von neuen Daten zu verwenden um neu Modelle zu entwickeln die zum Beispiel Vorgänge in der Natur noch akkurater wieder spiegeln.
 
-\section{Maschine Intelligenz}
+\section{Machine Intelligence}
+
+Maschine Intelligenz ist ein Begriff der so an sich noch nicht Definiert ist. Einige namhafte Unternehmen wie Google Inc. und Microsoft Corporation usw. bieten jeweils unterschiedliche Definitionen oder Beschreibungen. Dieser wird aber von allen ähnlich beschrieben und definiert. Es bezeichnet einen Überbegriff über das gesamte Gebiet mit Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und alle Themen die in näherer Beziehung dazu stehen. 
 
 \section{Machine Learning}
+
+Machine Learning definiert eine große Anzahl an Theorien und Umsetzungen von nicht explizit programmierten Abläufen. Diese wurden aus Studien in den Bereichen der Mustererkennung und Rechnerische Lerntheorien mit Künstlicher Intelligenz teilweise entwickelt. Dieses Gebiet umfasst im Jahr 2016 aber sehr viel mehr. So existieren zusätzlich Ansätze aus dem Bereich der Biologie wie zum Beispiel Neuronale Netzwerke die dem Gehirn nach empfunden sind und Genetische Algorithmen die der Weiterentwicklung eines Lebewesen ähnelt. Ein ganz andere Zugang wurde in der Sowjetunion verfolgte, mit sogenannte 'Support Vektor Machines'. 
 
 \section{Neuronale Netzwerke}
 
@@ -27,7 +32,7 @@ Zum einen stellt die Grundlage des gesamten Themas dar und soll für Interessier
 
 \section{Domänenklassen}
 
-\subsection{Clustern}
+\subsection{Clustering}
 
 \subsection{Regression}
 
@@ -41,7 +46,7 @@ Zum einen stellt die Grundlage des gesamten Themas dar und soll für Interessier
 
 \subsection{Optimierungsprobleme}
 
-\cite{AI3}
+%\cite{AI3}
 
 \section{Neuronale Netzwerktypen}
 
