--- a/einleitung.tex
+++ b/einleitung.tex
@@ -26,7 +26,7 @@ dass der Leser bereits über elementare Kenntnisse im Umgang mit
 Installation der Software vorausgesetzt -- der Arbeit nichts mehr
 im Wege stehen. Auch sonst ist der Start mit \latex\ nicht
 schwierig, da viele hilfreiche Informationen auf den zugehörigen
-Webseiten zu finden sind (s.\ Kap.~\ref{cha:ArbeitenMitLatex}).
+Webseiten zu finden sind (s.\ Kap.~\ref{cha:Einleitung}).
 
 
 \section{Ziel der Arbeit}
