2) NN, Neuron, Layer

--- a/begriffe.tex
+++ b/begriffe.tex
@@ -12,19 +12,45 @@ Damit Wissen aus Daten überhaupt extrahiert werden kann, muss ein ganzer Prozes
 
 \section{Machine Intelligence}
 
-Maschine Intelligenz ist ein Begriff der so an sich noch nicht Definiert ist. Einige namhafte Unternehmen wie Google Inc. und Microsoft Corporation usw. bieten jeweils unterschiedliche Definitionen oder Beschreibungen. Dieser wird aber von allen ähnlich beschrieben und definiert. Es bezeichnet einen Überbegriff über das gesamte Gebiet mit Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und alle Themen die in näherer Beziehung dazu stehen. 
+Maschine Intelligenz ist ein Begriff der so an sich noch nicht Definiert ist. Einige namhafte Unternehmen wie Google Inc. und Microsoft Corporation bieten jeweils unterschiedliche Definitionen oder Beschreibungen. Dieser wird aber von allen ähnlich beschrieben und definiert. Es bezeichnet einen Überbegriff über das gesamte Gebiet mit Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und alle Themen die in näherer Beziehung dazu stehen. 
 
 \section{Machine Learning}
 
-Machine Learning definiert eine große Anzahl an Theorien und Umsetzungen von nicht explizit programmierten Abläufen. Diese wurden aus Studien in den Bereichen der Mustererkennung und Rechnerische Lerntheorien mit Künstlicher Intelligenz teilweise entwickelt. Dieses Gebiet umfasst im Jahr 2016 aber sehr viel mehr. So existieren zusätzlich Ansätze aus dem Bereich der Biologie wie zum Beispiel Neuronale Netzwerke die dem Gehirn nach empfunden sind und Genetische Algorithmen die der Weiterentwicklung eines Lebewesen ähnelt. Ein ganz andere Zugang wurde in der Sowjetunion verfolgte, mit sogenannte 'Support Vektor Machines'. 
+Machine Learning definiert eine große Anzahl an Theorien und Umsetzungen von nicht explizit programmierten Abläufen. Diese wurden aus Studien in den Bereichen der Mustererkennung und Rechnerische Lerntheorien mit Künstlicher Intelligenz teilweise entwickelt. Dieses Gebiet umfasst im Jahr 2016 aber sehr viel mehr. So existieren zusätzlich Ansätze aus dem Bereich der Biologie wie zum Beispiel Neuronale Netzwerke, die dem Gehirn nach empfunden sind und Genetische Algorithmen die der Weiterentwicklung eines Lebewesen ähneln. Ein ganz andere Zugang wurde in der Sowjetunion verfolgte, mit sogenannte 'Support Vektor Machines', bei welchen man einen rein mathematischen Ansatz verfolgte.
 
 \section{Neuronale Netzwerke}
 
+Neuronale Netzwerke auch bekannt im Jahre 2016 unter dem Begriff 'Tiefes Lernen'. \\
+
+Die Theorie und die ersten Grundlagen wurden im Jahre 1943 von Warrn McCulloch und Walter Pitts geschaffen, die ein Modell entwickelten. Dieses basierte auf Mathematik und Algorithmen und führte zur 'Threshold Logik'. Durch den 'Backpropagation'-Algorithmus im Jahre 1975, wurden es möglich Netzwerke zu trainieren welche mehrere Ebenen hatten. \\
+
+Neuronale Netzwerke bestehen aus Neuronen die mit einander Verbunden sind und gemeinsam ein Netzwerk ergeben welches dem biologischen Gehirn nachempfunden ist. Die Verbindungen sind nicht fest vorgegeben sondern können auch zum Beispiel Schleife bilden.
+
 \section{Neuron}
+
+Abbildung ( Aufbau eines Neurons )
+
+Ein Neuron ist wie eine Zell in einem biologischen Gehirn nachempfunden und besteht aus:
+\paragraph{Informationseingangsstrom} ist Dateneingang wobei ein Neuron ein bis theoretisch unendlich viele solcher Eingänge haben könnte. Dies hängt von der jeweiligen Architektur des Netzwerks ab.
+\paragraph{Informationsgewichtung} bezeichnet die Gewichtung mit der der Eingangsstrom gewertet wird. So wird ein Informationseingangsstrom mehr berücksichtigt oder nicht. Diese Gewichtung wird durch die Backpropagation angepasst und nachjustiert.
+\paragraph{Kernfunktion} bewirkt das Verarbeiten der gewichteten Informationseingänge. Im einfachsten Fall werden alle Werte summiert zu einem Wert. Im Grunde ist es aber möglich jegliche Berechnung hier einfließen zu lassen.
+\paragraph{Aktivierungsfunktion} stellt den Ausgang eines Neuron dar. Dabei wird eine weitere Funktion auf das im Kern berechnete Ergebnis ausgeführt und führt dazu, dass ein Ergebnis noch stärker ausgeprägt weiter gegeben wird oder minimiert wird.
+
+\section{Bias Neuron}
 
 \section{Ebenen/Layer}
 
+Ebenen sind Zusammenschlüsse von Neuronen welche sich auf der selben Ebene befinden. Diese Neuronen sind aber nicht mit einander Verbunden, sondern bekommen Daten aus der Ebene davor und geben diese an die darauffolgende Ebene weiter. Diese Art wird Hiddenlayer genannt. Jedes Netzwerk benötigt zusätzlich jeweils zwei spezial Ausprägungen an Ebenen. Diese sind:
+
+\paragraph{Inputlayer} sind Ebenen die keine vorgeschaltete Ebene haben. Diese Ebenen nehmen die Daten ohne Gewichtung auf und geben sie verarbeitet an die darauffolgende Ebene weiter.
+
+\paragraph{Outputlayer} befindet sich am Ende eines Netzwerkes. Diese hat die Aufgabe die Daten nach außerhalb weiter zu geben anstatt an das darauffolgende Netzwerk.
+
+Abbildung ( Aufbau eines Einfachen FeedForward NN)
+
 \section{Informationen Merken}
+
+\section{Backpropagation}
 
 \section{Allgemeine Probleme}
 
