--- a/_DaBa.tex
+++ b/_DaBa.tex
@@ -53,14 +53,14 @@
 %%%----------------------------------------------------------
 
 %\include{vorwort}		% ggfs. weglassen
-\include{kurzfassung}
-\include{abstract}
+%\include{kurzfassung}
+%\include{abstract}
 
 %%%----------------------------------------------------------
 \mainmatter         % Hauptteil (ab hier arab. Seitenzahlen)
 %%%----------------------------------------------------------
 
-\include{einleitung}
+%\include{einleitung}
 \include{begriffe}
 \include{tensorflow}
 \include{keyPointDetection}
