--- a/begriffe.tex
+++ b/begriffe.tex
@@ -26,41 +26,72 @@ Die Theorie und die ersten Grundlagen wurden im Jahre 1943 von Warrn McCulloch u
 
 Neuronale Netzwerke bestehen aus Neuronen die mit einander Verbunden sind und gemeinsam ein Netzwerk ergeben welches dem biologischen Gehirn nachempfunden ist. Die Verbindungen sind nicht fest vorgegeben sondern können auch zum Beispiel Schleife bilden.
 
+%TODO: you can do anything with it, if it can be designed as a function
+
 \section{Neuron}
 
 Abbildung ( Aufbau eines Neurons )
 
 Ein Neuron ist wie eine Zell in einem biologischen Gehirn nachempfunden und besteht aus:
-\paragraph{Informationseingangsstrom} ist Dateneingang wobei ein Neuron ein bis theoretisch unendlich viele solcher Eingänge haben könnte. Dies hängt von der jeweiligen Architektur des Netzwerks ab.
-\paragraph{Informationsgewichtung} bezeichnet die Gewichtung mit der der Eingangsstrom gewertet wird. So wird ein Informationseingangsstrom mehr berücksichtigt oder nicht. Diese Gewichtung wird durch die Backpropagation angepasst und nachjustiert.
-\paragraph{Kernfunktion} bewirkt das Verarbeiten der gewichteten Informationseingänge. Im einfachsten Fall werden alle Werte summiert zu einem Wert. Im Grunde ist es aber möglich jegliche Berechnung hier einfließen zu lassen.
-\paragraph{Aktivierungsfunktion} stellt den Ausgang eines Neuron dar. Dabei wird eine weitere Funktion auf das im Kern berechnete Ergebnis ausgeführt und führt dazu, dass ein Ergebnis noch stärker ausgeprägt weiter gegeben wird oder minimiert wird.
+\paragraph{Informationseingangsstrom} ist der Dateneingang, wobei ein Neuron ein bis theoretisch unendlich viele solcher Eingänge haben könnte. Dies hängt von der jeweiligen Architektur des Netzwerks ab.
+
+\paragraph{Informationsgewichtung} bezeichnet die Gewichtung mit der der Eingangsstrom gewertet wird. Dies wird Gewichtung genannt. So wird ein Informationseingangsstrom mehr berücksichtigt oder nicht. Diese Gewichtung wird durch den Backpropagation-Algorithmus angepasst und nachjustiert.
+
+\paragraph{Kernfunktion} bewirkt das Verarbeiten der gewichteten Informationseingänge. Im einfachsten Fall werden alle Werte summiert zu einem Wert. Im Grunde ist es aber möglich jegliche Berechnung hier einfließen zu lassen, je nach Beinötigung.
+
+\paragraph{Aktivierungsfunktion} stellt den Ausgang eines Neuron dar. Dabei wird eine weitere Funktion auf das im Kern berechnete Ergebnis ausgeführt und führt dazu, dass ein Ergebnis noch stärker ausgeprägt weiter gegeben wird oder minimiert wird. Diese Aktivierungsfunktion ist meist die Sigmoid-Funktion oder eine Lineare-Funktion. Wobei in den vergangen Jahren die Linearen-Funktionen häufiger zum Einsatz kommen. 
 
 \section{Bias Neuron}
 
+Ein Bias definiert einen spezial Fall eines Neurons, welches weder Dateneingänge somit auch keine Gewichtung hat, sowie keine Berechnung im Kern durchführt. Dieses liefert nur einen Konstanten Wert aus wie zum Beispiel ein Eins. Durch die konstante Auslieferung wird auch die Aktivierungsfunktion überflüssig. Das Bias Neuron stellt somit einen konstanten Wert für das Netzwerk dar, beziehungsweise für die darauffolgende Ebene.
+
 \section{Ebenen/Layer}
 
-Ebenen sind Zusammenschlüsse von Neuronen welche sich auf der selben Ebene befinden. Diese Neuronen sind aber nicht mit einander Verbunden, sondern bekommen Daten aus der Ebene davor und geben diese an die darauffolgende Ebene weiter. Diese Art wird Hiddenlayer genannt. Jedes Netzwerk benötigt zusätzlich jeweils zwei spezial Ausprägungen an Ebenen. Diese sind:
+Ebenen sind Zusammenschlüsse von Neuronen welche sich auf der selben Ebene befinden. Diese Neuronen sind aber nicht mit einander Verbunden, sondern bekommen Daten aus der Ebene davor und geben diese an die darauffolgende Ebene weiter. Diese Art wird \textbf{Hiddenlayer} genannt. Jedes Netzwerk benötigt zusätzlich jeweils zwei spezial Ausprägungen an Ebenen. Diese sind:
 
-\paragraph{Inputlayer} sind Ebenen die keine vorgeschaltete Ebene haben. Diese Ebenen nehmen die Daten ohne Gewichtung auf und geben sie verarbeitet an die darauffolgende Ebene weiter.
+\paragraph{Inputlayer} sind Ebenen die keine vorgeschaltete Ebene haben. Diese Ebene nimmt die Daten ohne Gewichtung auf und gibt sie verarbeitet an die darauffolgende Ebene weiter. In gewisser Weise stellt es einen Übergang zwischen der Welt außerhalb und des Neuronalen Netzwerkes dar.
 
-\paragraph{Outputlayer} befindet sich am Ende eines Netzwerkes. Diese hat die Aufgabe die Daten nach außerhalb weiter zu geben anstatt an das darauffolgende Netzwerk.
+\paragraph{Outputlayer} befindet sich am Ende eines Netzwerkes. Dieser Layer hat die Aufgabe die Daten nach außerhalb weiter zu geben anstatt an das darauffolgende Netzwerk. Hierbei werden die Informationen meist nur mehr für die Ausgabe hergerichtet. So wird zum Beispiel die Wahrscheinlich für jeder möglichen Ausgänge berechnet.
 
 Abbildung ( Aufbau eines Einfachen FeedForward NN)
 
-\section{Informationen Merken}
+\section{Informationen Merken und wieder Erkennung}
+
+Durch das Anpassen der Gewichtungen bei jedem Dateneingangsstrom mit Hilfe des Backpropagation-Algorithmus wird es möglich Zustände zu speichern und diese auch zu Merken. Dies führt dazu, dass sollte ein ähnlicher Dateneingang statt finden, wo zuvor schon ein ähnlicher in einem Trainingszyklus vorhanden war, dieser ähnlich wieder erkennt werden kann. Dieser könnte somit möglicherweise zu der selben Kategorie gehört wie der schon zuvor schon bekannte gemachte und gelernte Dateneingang.
 
 \section{Backpropagation}
 
+TODO: relative genau
+
 \section{Allgemeine Probleme}
+
+Neuronale Netzwerke sind nicht Fehler und Problem los und sind nicht die Lösung auf jegliche Frage die es auf der Welt gibt. Es existieren bekannte Probleme für die es Lösungen oder Lösungsansätze gibt. Es existieren aber auch noch genügend andere Probleme, welche noch nicht festgestellt wurden oder als solche noch nicht erkannt worden sind. \\
+
+Diese Arbeit wird auf die bekanntesten Probleme eingehen und beschreiben und auch Lösungen wieder geben.
 
 \subsection{Overfitting}
 
+Overfitting bezeichnet ein Problem welches nicht nur Machine Intelligence betrifft sondern auch Menschen und andere Lebewesen. Zum Beispiel ein Student lernt auf eine Prüfung und ist im Besitz einer Klausur aus einem Vorjahr. Nach öfteren durchspielen der Fragen und sich selbst testen, befindet er sich in der Lage diese Klausur mit einer sehr hohen Wahrscheinlichkeit zu bestehen. Dabei hat sich die Klausur in seinem Gehirn eingeprägt aber nicht das Stoffgebiet zu welchem eine Klausur schreiben muss. Das Problem wird als Overfitting bezeichnet und beschreibt das etwas gemerkt wurde aber nicht gelernt worden ist und somit eine Abwandlung nicht wieder erkannt werden kann.
+
+\section{Trainieren}
+
+\subsection{Supervised Trainieren}
+
+\subsection{Unsupervised Trainieren}
+
 \section{Domänenklassen}
+
+Neuronale Netzwerk können sehr vielseitig eingesetzt werden. Grundsätzlich lässt sich jedes Problem, welches als Funktion repräsentiert werden kann, durch ein Neuronales Netzwerk approximieren. \\
+
+In dieser Arbeit werde ich sieben Hauptdomänen erklären und beschreiben, in welchen Neuronale Netzwerke öfters zum Einsatz kommen und eingesetzt werden.
 
 \subsection{Clustering}
 
+Clustering Problem bezeichnen das Einordnen von Daten in Klassen oder Gruppierungen. Diese Gruppierungen können von einem Netzwerk selbst definiert werden oder festgelegt in wie viele Gruppen die Daten eingeordnet werden sollen. Diese Netzwerke agieren meist unsupervised und besitzen meist die Möglichkeit sich nach dem Trainieren, sich noch selbst weiter anzupassen. Dies erlaubt dem Netzwerk auf sich ändernde Daten anzupassen und das Clustern und Gruppieren weiter zu führen ohne ein neues Netzwerk erstellen zu müssen.
+
 \subsection{Regression}
+
+
 
 \subsection{Klassifikation}
 
